Essai de résolution du bug de marge sur la droite version mobile

--- a/css/profil.css
+++ b/css/profil.css
@@ -64,6 +64,7 @@ h4{font-weight: bold; margin: 5px 0 15px 10px}
 #map-section p {top:30px;right:10px;}
 #edit-media img{height: 130px;}
 #edit-media{width: 85%;}
+#list-checkins ul li{width: 80%; margin: 0 auto 25px auto;padding: 8px 10px;} 
 }
 
 
